// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lksfSS"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 cSYMfL"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 jRoonw"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render always on 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lksfSS"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 cSYMfL"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 iHqYbC"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render disabled 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lksfSS"
      disabled=""
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 liVEyY"
      disabled=""
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 bTyxJm"
        disabled=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render small 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lksfSS"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 cmnsRE"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should toggle checked 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lksfSS"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 cSYMfL"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 jRoonw"
      />
    </div>
  </label>
</DocumentFragment>
`;
